# detection-of-malicious-SQL-queries

./: README.md  notebook.ipynb  pyproject.toml
